# eagle

./: .gitignore  .markdownlint.yml  .mlc_config.json  .pre-commit-config.yaml  .taplo.toml  AGENTS.md  Cargo.toml  LICENSE  README.md  docker-compose.yml  justfile
.github/workflows/: bench.yml  ci.yml  docs.yml  release.yml
.opencode/skills/rust/: SKILL.md
.opencode/skills/rust/references/: api-guidelines.md  concurrency.md  lifetimes.md  ownership.md  patterns.md  style-guide.md  undefined-behavior.md
crates/core/: Cargo.toml
crates/core/benches/: memory_bench.rs  pmem_bench.rs  redis_comparison.rs
crates/core/src/: error.rs  lib.rs  pattern.rs
crates/core/src/hash/: mod.rs
crates/core/src/pmem/: allocator.rs  layout.rs  mod.rs  recovery.rs  secure_buffer.rs
crates/core/src/resp/: encoder.rs  mod.rs  parser.rs
crates/core/src/store/: aof.rs  entry.rs  expiration.rs  memory.rs  mod.rs  policy.rs  secure_bytes.rs  set_ops.rs  snapshot.rs  snapshot_scheduler.rs
crates/core/src/store/dash/: directory.rs  mod.rs  segment.rs
crates/core/src/sync/: epoch.rs  mod.rs  rcu.rs
crates/core/tests/: basic_ops.rs  crash_recovery.rs  fuzz.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs  tracing_config.rs
crates/server/src/command/: cluster.rs  connection.rs  generic.rs  hash.rs  mod.rs  persistence.rs  scan.rs  set_get.rs  string.rs  ttl.rs
crates/server/src/config/: cluster.rs
crates/server/src/metrics/: collector.rs  mod.rs
crates/server/src/net/: cluster.rs  connection.rs  health.rs  mod.rs  protocol.rs
docs/: API_REFERENCE.md  ARCHITECTURE.md  MILESTONES.md  PMEM_SETUP.md  WORKSPACE.md
examples/: cluster_client.rs  simple_server.rs
o11y/grafana/provisioning/dashboards/: all.yml  eagledb-dashboard.json
o11y/prometheus/: prometheus.yml
scripts/: README.md  coredump-config.sh  numa-setup.sh  setup-pmem.sh
scripts/ci/: markdownlint.sh  shellcheck.sh  sync-rust-version.sh  taplo.sh
