[package]
name = "eagle"
version = "0.1.0"
edition = { workspace = true }

[workspace]
members = [".", "crates/core", "crates/server"]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["Khai Le <khaile.to@gmail.com>"]
categories = ["pmem", "key-value"]
repository = "github.com:khaile/eagle.git"
description = "A high-performance key-value store with persistent memory support"
license = "MIT"

[workspace.dependencies]
ahash = "0.8"
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
byteorder = "1.5"
bytes = "1.11"
clap = { version = "4.5", features = ["derive"] }
crc32fast = "1.5"
crossbeam = { version = "0.8", features = ["std"] }
crossbeam-epoch = "0.9"
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"
dashmap = "6.1"
glob = "0.3"
hashbrown = "0.16"
itoa = "1.0"
libc = "0.2"
lz4_flex = "0.12"
memmap2 = "0.9"
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
num_cpus = "1.17"
parking_lot = "0.12"
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.49", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1.19", features = ["v4", "v7"] }
zeroize = "1.8"

[dependencies]
anyhow = { workspace = true }
eagle-server = { path = "crates/server" }
tokio = { workspace = true }

[profile.release]
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1

[profile.bench]
debug = true
