[package]
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
authors = { workspace = true }
name = "eagle-server"
version = "0.1.0"
description = "EagleDB server components"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
eagle-core = { path = "../core" }
foundations = { workspace = true }
hashbrown = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
